feat(WP-283): 마일리지 적립 정책 학년도 제거 및 학기별 집계 개선
- MileagePolicy 엔티티와 관련 DTO에서 academicYear 필드 및 호출부 제거
- MileagePolicyRepository/RepositoryImpl/Service에서 academic_year 컬럼, 파라미터, 필터 조건 제거
- 마일리지 정책 버전 식별 기준을 활동유형·학기·버전으로 변경
- ProgramMileagePolicyPreviewResponseDTO에서 마일리지 학년도 참조 제거
- 적립 상한 계산을 거래 기준일의 학사기간으로 처리하도록 개선
- 대시보드 학기별 마일리지 집계를 policy.semesterCode 기준 DB 합산 방식으로 변경
- SEMESTER 공통코드의 sortOrder를 사용해 학기 순서를 적용하고 거래가 없는 학기는 0점으로 표시
- ALL 정책 거래는 특정 학기에 임의 포함하지 않고 전체 점수로 별도 집계
- 학기별 집계 조회 시 선택 학사기간 범위를 적용해 불필요한 전체 거래 조회 방지
- 마일리지 정책 학년도 제거용 SQL은 프로젝트 외부 파일로 별도 제공
- gradlew test 통과